--- a/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
+++ b/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
@@ -9,10 +9,11 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="9.4.3-preview.1.25230.7" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
