--- a/LocalAiDemo/LocalAiDemo/appsettings.json
+++ b/LocalAiDemo/LocalAiDemo/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "AppSettings": {
-    "TTS": {
-      "PreferredProvider": "System"
-    }
+  "AppConfiguration": {
+    "TtsProvider": "Browser",
+    "SttProvider": "Browser",
+    "GenerationProvider": "Phi-3 Mini 4K Instruct (Q4)"
   }
 }
