Zwischenstand GenAI working

--- a/LocalAiDemo/LocalAiDemo/appsettings.json
+++ b/LocalAiDemo/LocalAiDemo/appsettings.json
@@ -2,6 +2,6 @@
   "AppConfiguration": {
     "TtsProvider": "Browser",
     "SttProvider": "Browser",
-    "GenerationProvider": "Phi-3 Mini 4K Instruct (Q4)"
+    "GenerationProvider": "Gemma 3 12B Instruct (Q2_K_L)"
   }
 }
