--- a/LocalAiDemo/LocalAiDemo/LocalAiDemo.csproj
+++ b/LocalAiDemo/LocalAiDemo/LocalAiDemo.csproj
@@ -71,6 +71,9 @@
     <MauiAsset Remove="SQLiteExtensions\vec0.so" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.70" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.70" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
