--- a/LocalAiDemo/LocalAiDemo/appsettings.json
+++ b/LocalAiDemo/LocalAiDemo/appsettings.json
@@ -2,6 +2,7 @@
   "AppConfiguration": {
     "TtsProvider": "Browser",
     "SttProvider": "Browser",
-    "GenerationProvider": "Gemma 3 12B Instruct (Q2_K_L)"
+    "GenerationProvider": "Phi-3.5 Mini Instruct (Q2_K)",
+    "UseSemanticKernel": false
   }
 }
