Zwischenstand System TTS working

--- a/LocalAiDemo/LocalAiDemo/appsettings.json
+++ b/LocalAiDemo/LocalAiDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppConfiguration": {
-    "TtsProvider": "Browser",
+    "TtsProvider": "System",
     "SttProvider": "Browser",
     "GenerationProvider": "Phi-3.5 Mini Instruct (Q2_K)",
     "UseSemanticKernel": false
