--- a/LocalAiDemo/LocalAiDemo/appsettings.json
+++ b/LocalAiDemo/LocalAiDemo/appsettings.json
@@ -1,8 +1,32 @@
-{
-  "AppConfiguration": {
-    "TtsProvider": "System",
+{  "AppConfiguration": {
+    "TtsProvider": "ThorstenOnnx",
     "SttProvider": "Browser",
     "GenerationProvider": "Phi-3.5 Mini Instruct (Q2_K)",
-    "UseSemanticKernel": false
+    "UseSemanticKernel": false,
+    "TtsSettings": {      "LocalTtsProvider": "ThorstenOnnx",
+      "EnableESpeakTts": true,
+      "EnablePiperTts": true,
+      "EnableOnnxTts": true,
+      "EnableThorstenOnnxTts": true,
+      "ESpeakSettings": {
+        "Speed": 150,
+        "Pitch": 50,
+        "Amplitude": 100,
+        "Voice": "de"
+      },
+      "PiperSettings": {
+        "PreferredModel": "de_DE-thorsten-medium.onnx",
+        "ModelsPath": "./PiperModels"
+      },      "OnnxSettings": {
+        "ModelsPath": "./TtsModels",
+        "PreferredModel": "de_DE_neural.onnx"
+      },      "ThorstenOnnxSettings": {
+        "ModelsPath": "./TtsModels",
+        "PreferredModel": "thorsten",
+        "AutoDownload": true,
+        "DefaultQuality": "medium",
+        "DownloadTimeout": 600
+      }
+    }
   }
 }
