--- a/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
+++ b/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
@@ -19,7 +19,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.56.0" />
-    <PackageReference Include="OllamaSharp" Version="5.1.18" />    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+    <PackageReference Include="OllamaSharp" Version="5.1.18" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.21.0" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime.Managed" Version="1.21.0" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
     <PackageReference Include="Whisper.net" Version="1.8.1" />
     <PackageReference Include="Whisper.net.Runtime" Version="1.8.1" />
