--- a/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
+++ b/LocalAiDemo/LocalAiDemo.Shared/LocalAiDemo.Shared.csproj
@@ -1,28 +1,37 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>  <ItemGroup>
-    <PackageReference Include="LLamaSharp" Version="0.24.0" />
-    <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.24.0" />
-    <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.24.0" />
-    <PackageReference Include="LLamaSharp.semantic-kernel" Version="0.24.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="9.5.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.56.0" />
-    <PackageReference Include="OllamaSharp" Version="5.1.18" />    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
-    <PackageReference Include="Whisper.net" Version="1.8.1" />
-    <PackageReference Include="Whisper.net.Runtime" Version="1.8.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="LLamaSharp" Version="0.24.0" />
+		<PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.24.0" />
+		<PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.24.0" />
+		<PackageReference Include="LLamaSharp.semantic-kernel" Version="0.24.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.5" />
+		<PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="9.5.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+		<PackageReference Include="Microsoft.SemanticKernel" Version="1.56.0" />
+		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.3" />
+		<PackageReference Include="Microsoft.ML.Tokenizers" Version="0.22.0" />
+		<PackageReference Include="System.Numerics.Tensors" Version="9.0.3" />
+		<PackageReference Include="OllamaSharp" Version="5.1.18" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
+		<PackageReference Include="Whisper.net" Version="1.8.1" />
+		<PackageReference Include="Whisper.net.Runtime" Version="1.8.1" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Update="Models\all-MiniLM\all-MiniLM-L6-v2.onnx">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
